--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Paula Pokemon</title>
+  <link rel="icon" type="image/png" href="images/pokeball-icon.jpg"/><link rel="icon" type="image/png" href="images/pokemon-icon.png"/>
   <link rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <li>
           <a href="" class=" icon nav-grey">
             <span class="icon-margin icon-home"></span>
-            <span >Pagina de inicio</span>
+            <span>Pagina de inicio</span>
         </a>
         </li>
         <li>
@@ -242,7 +243,7 @@
             </dl>
           </div>
         </li>
-                <li class="pokemon-item">
+        <li class="pokemon-item">
           <div class="pokemon-image">
             <img src="images/133.png" >
           </div>
@@ -263,48 +264,57 @@
     </div>
   </section>
 
-
-  <section class="content">
+  <section class="">
     <div class="contenedor">
       <div class="semana-container">
-        <div class="latias">
+        <div class="meseevee">
           <img src="images/dragon-pokemon.jpg">
-          <div class="background-latias">
-            <h3>El mes de eevee evoluciona en TV Pokémon</h3>
-            <p>Espeon y Umbreon aparecen por primera vez en la serie de Pokémon a medida que continua el mes Eevee en TV Pokémon</p>
+          <div class="background-padding">
+            <h3>El mes de eevee evoluciona </h3>
+            <p>Espeon y Umbreon aparecen por primera vez en la serie de Pokémon</p>
           </div>
         </div>
-        <div class="duo-latias">
+        <div class="duoleyenda">
           <img src="images/latios-latias.jpg">
-          <h3>Un duo de leyenda</h3>
-          <p>Añade a latias y a latios a tu equipo y has que liberen combates estratosféricos</p>
+          <div class="background-padding">
+            <h3>Un duo de leyenda</h3>
+            <p>Añade a latias y a latios a tu equipo y has que liberen combates estratosféricos</p>
+          </div>
         </div>
-        <div class="ultra">
+        <div class="Twich">
           <img src="images/pokemon-ultra.jpg">
-          <h3>Ve la serie Pokémon en Twich</h3>
-          <p>El canal Twich presents va a incluir un increible maratón de dibujos animados Pokemon con episodios de televisión y películas!</p>
+          <div class="background-padding">
+            <h3>Ve la serie Pokémon en Twich</h3>
+            <p>El canal Twich va a incluir una maratón de dibujos animados con episodios de televisión!</p>
+          </div>
         </div>
-        <div class="texto">
-          <h3>¿Qué novedades hay esta semana?</h3>
+        <div class="novedades">
+          <div>
+            <h3>¿Qué novedades hay esta semana?</h3>
+          </div>
         </div>
-        <div class="serie-sol">
+        <div class="seriesol">
           <img src="images/2019-vgc-strategy-169-es.jpg">
-          <h3>¡preparate para combatir en la serie Sol!</h3>
+          <div class="background-padding">
+            <h3>¡preparate para combatir en la serie Sol!</h3>
+          </div>
         </div>
-        <div class="eevee">
+        <div class="tormenta">
           <img src="images/eevee-video-game-history-169-m-es.jpg">
-          <h3>Las apariciones estelares de Eevee</h3>
+          <div class="background-padding">
+            <h3>Las apariciones estelares de Eevee</h3>
+          </div> 
         </div>
-
-        <div class="dragones-latias">
+        <div class="noticias">
           <img src="images/tcg-dragon.jpg">
-          <h3>Majestad de dragones alza el vuelo con Latias y Latios</h3>
+          <div class="background-padding">
+            <h3>Majestad de dragones alza el vuelo con Latias y Latios</h3>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  </section>
   <footer class="footer">
     <div class="contenedor">
       <div class="footer-container">
